force-app/main/default/objects/AccountAddress__c/AccountAddress__c.object-meta.xml
<CustomObject>
    <description>Account Address holds billing and shipping addresses for an Account. When building a Project a billing address must be specified for an Account that is added to a Project. Account Address is related to Account and Project Account.</description>
    <label>Account Address</label>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>