force-app/main/default/objects/AccountAddress__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A checkbox that indicates if this account address is active.</description>
    <inlineHelpText>Select this box if this account address is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>