force-app/main/default/objects/AccountAddress__c/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <description>An entry field for the account address.</description>
    <inlineHelpText>Enter the account address.</inlineHelpText>
    <label>Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>