force-app/main/default/objects/AccountAddress__c/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <description>An additional entry field for the account address.</description>
    <inlineHelpText>Enter additional address information for this account address.</inlineHelpText>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>