force-app/main/default/objects/AccountAddress__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates all necessary fields have been inserted for an account.</description>
    <inlineHelpText>Select this box if this account has all necessary data.</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>