force-app/main/default/objects/AccountAddress__c/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <description>An entry field for the name of the person that receives the shipping or billing mail.</description>
    <inlineHelpText>Enter the name of the person to receive mail for billing or shipping.</inlineHelpText>
    <label>Attention</label>
    <length>100</length>
    <type>Text</type>
</CustomField>