force-app/main/default/objects/AccountAddress__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>An entry field that indicates the city for this account address.</description>
    <inlineHelpText>Enter the city for this account address.</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>