force-app/main/default/objects/AccountAddress__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A search field that indicates the contact for this account address.</description>
    <inlineHelpText>Enter the contact for this account address.</inlineHelpText>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Addresses</relationshipLabel>
    <relationshipName>Account_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>