force-app/main/default/objects/AccountAddress__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>An entry field that indicates the country.</description>
    <inlineHelpText>Enter the country for this account address..</inlineHelpText>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>