force-app/main/default/objects/AccountAddress__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>An entry field that indicates the email that relates to this account address.</description>
    <inlineHelpText>Enter the email for this account address.</inlineHelpText>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>