force-app/main/default/objects/AccountAddress__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>An entry field that indicates the latitude for this account address.</description>
    <inlineHelpText>Enter the latitude for this account address.</inlineHelpText>
    <label>Latitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>