force-app/main/default/objects/AccountAddress__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>An entry field that indicates the longitude for this account address.</description>
    <inlineHelpText>Enter the longitude for this account address.</inlineHelpText>
    <label>Longitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>