force-app/main/default/objects/AccountAddress__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>An entry field that indicates the name for this account address.</description>
    <inlineHelpText>Enter the name for this account address.</inlineHelpText>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>