force-app/main/default/objects/AccountAddress__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>An entry field that indicates the phone number for this account address.</description>
    <inlineHelpText>Enter the phone number for this account address.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>