force-app/main/default/objects/AccountAddress__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>An entry field that indicates the postal code for this account address.</description>
    <inlineHelpText>Enter the postal code for this account address.</inlineHelpText>
    <label>Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>