force-app/main/default/objects/AccountAddress__c/fields/StateProvince__c.field-meta.xml
<CustomField>
    <fullName>StateProvince__c</fullName>
    <description>An entry field that indicates the state or province for this account address.</description>
    <inlineHelpText>Enter the state or province for this account address.</inlineHelpText>
    <label>State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>