force-app/main/default/objects/AccountAddress__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates whether this account address is verified.</description>
    <inlineHelpText>Select this box if this account address is verified.</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>