force-app/main/default/objects/AccountAddress__c/recordTypes/BillingAddress.recordType-meta.xml
<RecordType>
    <fullName>BillingAddress</fullName>
    <active>true</active>
    <description>Billing Address</description>
    <label>Billing Address</label>
</RecordType>