force-app/main/default/objects/AccountAddress__c/recordTypes/ShippingAddress.recordType-meta.xml
<RecordType>
    <fullName>ShippingAddress</fullName>
    <active>true</active>
    <description>Shipping Address</description>
    <label>Shipping Address</label>
</RecordType>